--- a/README.org
+++ b/README.org
@@ -1,6 +1,8 @@
-Abelujo
+#+TITLE: Abelujo - logiciel libre de gestion de petite librairie indépendante
+#+DATE: <2014-03-02 dim.>
+#+AUTHOR: Vincezd
+#+EMAIL: vincezd@gmail.com
 
-Logiciel  libre  de  gestion  de  petite  librairie  indépendante.
 
 Projet actuellement en chantier. Il est néanmoins possible de:
 - rechercher  des livres  par mots-clefs  ou par n°ISBN/EAN.  La recherche
@@ -32,25 +34,24 @@ Get the sources:
 git clone https://gitlab.com/vindarel/abelujo.git
 #+END_SRC
 
-Create  and activate  a  virtual environment  (we  can install  python
-libraries locally, not globally to your system). Do as you want, or do
-the following:
+Create  and activate  a virtual  environment (so  than we  can install
+python  libraries locally,  not globally  to your  system). Do  as you
+are used to, or do the following:
 #+BEGIN_SRC sh#
-pip install virtualenvwrapper
+sudo pip install virtualenvwrapper  # you need: sudo apt-get install python-pip
 source venv_create.sh
 #+END_SRC
 now  your  shell prompt  should  indicate  you  are in  the  "abelujo"
 virtualenv. To quit  the virutal env, type "deactivate".  To enter it,
 type "workon <TAB> abelujo".
 
-To  install the  dependencies, create  and populate  the  database and
-test everything's working, run.
+To  install the  dependencies, create  and populate  the  database, run:
 #+BEGIN_SRC sh
 ./install.sh
 #+END_SRC
 
-We are  done !   Now to  run the server  (it is  a server  for testing
-purposes only) and try Abelujo, use the management command like this:
+We are  done !  Now  to try Abelujo,  run the development  server like
+this:
 #+BEGIN_SRC sh
 python manage.py runserver
 # or set the port with:
@@ -58,6 +59,7 @@ python manage.py runserver
 #+END_SRC
 and open  your browser  to [[http://127.0.0.1:8000][localhost:8000]].
 
+Enjoy ! Don't forget to give feedback at ehvince (at) mailz.org !
 
 
 * Développement
