--- a/locale/fr_FR/LC_MESSAGES/djangojs.po
+++ b/locale/fr_FR/LC_MESSAGES/djangojs.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-02-18 17:32+0100\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"PO-Revision-Date: 2016-02-18 18:05+0100\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: \n"
@@ -76,7 +76,7 @@ msgstr "autre imprimé"
 #: static/js/app/controllers/sellController.js:21
 #: static/js/app/controllers/sellController.js:22
 msgid "CD"
-msgstr ""
+msgstr "CD"
 
 #: static/js/app/controllers/sellController.js:21
 msgid "DVD"
