Inventory UI: show the diff (ongoing)

--- a/locale/fr_FR/LC_MESSAGES/djangojs.po
+++ b/locale/fr_FR/LC_MESSAGES/djangojs.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-02-18 17:32+0100\n"
-"PO-Revision-Date: 2016-02-18 18:05+0100\n"
+"POT-Creation-Date: 2016-02-26 16:59+0100\n"
+"PO-Revision-Date: 2016-02-26 17:10+0100\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: \n"
@@ -80,11 +80,11 @@ msgstr "CD"
 
 #: static/js/app/controllers/sellController.js:21
 msgid "DVD"
-msgstr ""
+msgstr "DVD"
 
 #: static/js/app/controllers/sellController.js:22
 msgid "vinyl"
-msgstr ""
+msgstr "vinyl"
 
 #: static/js/app/controllers/sellController.js:23
 msgid "others"
