--- a/locale/fr_FR/LC_MESSAGES/django.po
+++ b/locale/fr_FR/LC_MESSAGES/django.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-04-12 16:35+0000\n"
-"PO-Revision-Date: 2016-04-07 00:49+0200\n"
+"PO-Revision-Date: 2016-04-29 20:09+0200\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: \n"
@@ -1037,7 +1037,7 @@ msgstr "Supprimer"
 
 #: templates/search/inventories.jade:56
 msgid "What are you doing the inventory of ?"
-msgstr "De quel lieu faites-vous l'inventaire ?"
+msgstr "De quoi faites-vous l'inventaire ?"
 
 #: templates/search/inventories.jade:61
 msgid "A shelf"
